feat: update terminal theme colors and enhance button styles for improved UI

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,9 +1,9 @@
 // Terminal/Console theme variables
 
 // Colors - Hacker/Terminal style
-$color-bg-dark: #0a0e0f;
-$color-bg-darker: #060809;
-$color-bg-light: #141819;
+$color-bg-dark: #1a202c;
+$color-bg-darker: #171d28;
+$color-bg-light: #252d3a;
 $color-terminal-green: #00ff41;
 $color-terminal-green-dim: #00cc33;
 $color-terminal-green-dark: #008822;
